# SIANV

./: .gitmodules  README.md  frames_2025-03-16_17.54.35.gv  frames_2025-03-19_17.44.33.gv
arduino_ros2_pkg/: CMakeLists.txt  package.xml
arduino_ros2_pkg/config/: Joystick.yaml  serial.yaml
arduino_ros2_pkg/launch/: teleop_joystick.launch.py
arduino_ros2_pkg/scripts/: joystick_telop.py
arduino_ros2_pkg/scripts/MotorControl/: MotorControl.ino
arduino_ros2_pkg/src/: main.cpp  main_driver.py
cartographer_ros2/: CMakeLists.txt  package.xml
cartographer_ros2/config/: cartographer_config.lua  cartographer_localization_config.lua
cartographer_ros2/launch/: cartographer.launch.py  cartographer_localization.launch.py
cartographer_ros2/maps/: Note  map.pbstream
customSLAM/: CMakeLists.txt  package.xml
imu_drivers/: CMakeLists.txt  package.xml
nav2/: CMakeLists.txt  package.xml
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: robot_description_launch.py  spawm_entity_simulation.launch.py
robot_description/models/: robot.urdf.xacro  robot_core.xacro
robot_nav2/: CMakeLists.txt  package.xml
robot_nav2/config/: mapper_params_online_async.yaml
robot_nav2/launch/: bringup.launch.py  hardware.launch.py  mapping_hardware.launch.py
robot_nav2/maps/: home_map.pgm  map.pgm
robot_nav2/params/: global_costmap.yaml  local_costmap.yaml  nav2_params.yaml
robot_nav2/scripts/: odometry_publisher.py
voiceRecognition/: README.md  package.xml  setup.cfg  setup.py
voiceRecognition/voiceRecognition/: voice_command.py
